chore: fix emoji on mobile

--- a/src/styles/question.module.css
+++ b/src/styles/question.module.css
@@ -53,6 +53,7 @@
 	align-items: center;
 	font-size: 24px;
 	margin-right: 8px;
+	flex-shrink: 0;
 }
 
 .userContainer p,
